# grpc_mini2_project

./: CMakeLists.txt  MotorVehicleCollisionData_subset.csv  Motor_Vehicle_Collisions_-_Crashes_20250123.csv  client.cpp  collision.cpp  collision.hpp  collision_field_enum.hpp  collision_manager.cpp  collision_manager.hpp  collision_manager_benchmark.cpp  collision_manager_test.cpp  collision_parser.cpp  collision_parser.hpp  collision_parser_benchmark.cpp  main.cpp  query.cpp  query.hpp  server.cpp
grpc_cmake/: server.cmake
proto/: collision.proto  profile.proto
